Fix mobile functionality - works on iPhone

--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -22,7 +22,7 @@ paper-card.card-content {
 }
 
 #canvas {
-    background-color: #ddd;
+    background-color: #3DBDFF;
 }
 
 .mouseDown {
